--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CesiumJS App</title>
-  </head>
-  <body>
-    <div id="cesiumContainer" style="width: 100%; height: 100vh;"></div>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>CesiumJS NPM Setup</title>
+  <link href="./style.css" rel="stylesheet" />
+</head>
+<body>
+  <div id="inputForm">
+      <h4>Place a Tower</h4>
+      <label for="latitude">Latitude</label>
+      <input type="text" id="latitude" placeholder="Enter here" required>
+      <label for="longitude">Longitude</label>
+      <input type="text" id="longitude" placeholder="Enter here" required>
+      <label for="height">Height (m)</label>
+      <input type="text" id="height" placeholder="Enter here" required>
+      <label for="assetId">Asset ID</label>
+      <input type="text" id="assetId" placeholder="Enter here" required>
+      <label for="heading">Heading (0 to 360°)</label>
+      <input type="text" id="heading" placeholder="Enter here" required>
+      <label for="pitch">Pitch (-90 to 90°)</label>
+      <input type="text" id="pitch" placeholder="Enter here" required>
+      <label for="roll">Roll (-180 to 180°)</label>
+      <input type="text" id="roll" placeholder="Enter here" required>
+      <button id="placeTowerBtn">Place Tower</button>
+  </div>
+  
+  <div id="deleteTowerForm" style="display: none;">
+      <h4>Delete Tower</h4>
+      <button id="deleteSelectedTowerBtn">Delete Selected Tower</button>
+  </div>
+  
+  <div id="cesiumContainer" style="width: 100%; height: 100vh;"></div>
+  
+  <script type="module" src="./index.js"></script>
+</body>
 </html>
