--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,128 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>CesiumJS NPM Setup</title>
-  <link href="./style.css" rel="stylesheet" />
+  <style>
+    /* Basic styling for the Cesium container and full page layout */
+    html, body, #cesiumContainer {
+        width: 100%;
+        height: 100%;
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+    }
+
+    input {
+        vertical-align: middle;
+        padding-top: 2px;
+        padding-bottom: 2px;
+    }
+
+    /* Styling for the tower placement form */
+    #inputForm {
+        position: absolute;
+        top: 150px;
+        left: 10px;
+        padding: 10px;
+        z-index: 1;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        background: rgba(255, 255, 255, 0.8);
+        width: 160px;
+    }
+
+    /* Use Cesium-like styling for input fields */
+    #inputForm input {
+        vertical-align: middle;
+        padding-top: 2px;
+        padding-bottom: 2px;
+        margin-bottom: 8px;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        font-size: 14px;
+        width: 100%; /* Make the input fill the width of the form */
+        box-sizing: border-box;
+    }
+
+    /* Styling for the tower deletion form */
+    #deleteTowerForm {
+        display: none;
+        position: absolute;
+        top: 200px;
+        left: 10px;
+        background: rgba(255, 0, 0, 0.8);
+        padding: 10px;
+        z-index: 1;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+    }
+
+    /* Header styling for the form sections */
+    h4 {
+        text-align: center;
+        margin-bottom: 10px;
+        font-size: 20px;
+        color: #333;
+    }
+
+
+
+    /* Button styling */
+    button {
+        width: 100%;
+        padding: 10px;
+        background-color: #444;
+        color: white;
+        border: none;
+        border-radius: 4px;
+        font-size: 16px;
+        cursor: pointer;
+        margin-top: 10px;
+    }
+
+    /* Button hover effect */
+    button:hover {
+        background-color: #555;
+    }
+
+    /* Full height and width layout for Cesium viewer */
+    #cesiumContainer {
+        width: 100%;
+        height: 100vh;
+    }
+
+    /* Toolbar styling */
+    #toolbar {
+        background: rgba(42, 42, 42, 0.8);
+        padding: 4px;
+        border-radius: 4px;
+        position: absolute;
+        top: 10px;
+        left: 10px;
+        z-index: 10;
+    }
+
+    #toolbar input {
+        vertical-align: middle;
+        padding-top: 2px;
+        padding-bottom: 2px;
+    }
+
+    /* Loading overlay styling */
+    #loadingOverlay {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.7);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: white;
+        z-index: 100;
+    }
+
+  </style>
 </head>
 <body>
   <div id="inputForm">
@@ -26,13 +147,38 @@
       <button id="placeTowerBtn">Place Tower</button>
   </div>
   
-  <div id="deleteTowerForm" style="display: none;">
+  <div id="deleteTowerForm">
       <h4>Delete Tower</h4>
       <button id="deleteSelectedTowerBtn">Delete Selected Tower</button>
   </div>
+
+  <div id="cesiumContainer"></div>
   
-  <div id="cesiumContainer" style="width: 100%; height: 100vh;"></div>
-  
+  <!-- Loading overlay -->
+  <!-- <div id="loadingOverlay"><h1>Loading...</h1></div> -->
+
+  <!-- Toolbar for clustering -->
+  <div id="toolbar">
+    <table>
+      <tbody>
+        <tr>
+          <td>Pixel Range</td>
+          <td>
+            <input type="range" min="1" max="200" step="1" data-bind="value: pixelRange, valueUpdate: 'input'">
+            <input type="text" size="2" data-bind="value: pixelRange">
+          </td>
+        </tr>
+        <tr>
+          <td>Minimum Cluster Size</td>
+          <td>
+            <input type="range" min="2" max="20" step="1" data-bind="value: minimumClusterSize, valueUpdate: 'input'">
+            <input type="text" size="2" data-bind="value: minimumClusterSize">
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+
   <script type="module" src="./index.js"></script>
 </body>
 </html>
