--- a/src/index.html
+++ b/src/index.html
@@ -42,12 +42,12 @@
 
   <div id="cesiumContainer"></div>
 
-  <!-- Signal Strength Slider -->
+  <!-- Signal Strength Slider
   <div id="sliderContainer">
     <label for="radiusSlider"> Signal Strength:</label>
     <input type="range" id="radiusSlider" min="50" max="1000" step="10" value="150">
     <span id="radiusValue">150</span> m
-  </div>  
+  </div>   -->
 
   <script type="module" src="./index.js"></script>
 </body>
